# notifications_app

./: .dockerignore  .env  README.md  config.py  docker-compose.yaml  pyproject.toml  runner.py
app/: __init__.py  celery_utils.py  extensions.py  models.py  routes.py  serializers.py  signals.py  tasks.py
app/utils/: __init__.py  utils.py  validators.py
app/views/: notifications_views.py  users_views.py
compose/flask/: Dockerfile  entrypoint  start
compose/flask/celery/flower/: start
compose/flask/celery/worker/: start
